--- a/paper/sections/_0-abstract.tex
+++ b/paper/sections/_0-abstract.tex
@@ -6,7 +6,7 @@
 % This section should be the shortest part of the abstract and should very briefly outline the following information:
 % - What is already known about the subject, related to the paper in question
 % - What is not known about the subject and hence what the study intended to examine (or what the paper seeks to present)
-Unmanned ground vehicles (UGVs) are well suited to tasks that are either too dangerous or too tedious for people. For example,  UGVs can be used to locate disaster victims.
+Unmanned ground vehicles (UGVs) are well suited to tasks that are either too dangerous or too tedious for people. For example, UGVs can traverse arduous terrain in search of disaster victims.
 %
 However, it is difficult to design these system so that they perform well in a variety of different environments.
 %
@@ -14,22 +14,20 @@ However, it is difficult to design these system so that they perform well in a v
 %
 %%% Methods
 % The methods section is usually the second-longest section in the abstract. It should contain enough information to enable the reader to understand what was done, and how.
-In this study, we have evolved controllers and physical characteristics (dimensions of the chassis and wheel) of a UGV to improve its mobility in a simulated environment.
+In this study, we evolve controllers and physical characteristics (dimensions of the chassis and wheel) of a UGV to improve its mobility in a simulated environment.
 %
-The UGV's mission is to visit a sequence of coordinates in order while automatically handling obstacles of varying sizes.
+The UGV's mission is to visit a sequence of coordinates while automatically handling obstacles of varying sizes.
 %
-Results from evolving a hand-designed finite state machine (FSM) and artificial neural networks (ANNs) were compared, and a new FSM was designed base on principles learned from the best ANN controller.
+Evolved finite state machines (FSM) and artificial neural networks (ANNs) are compared, and a new controller is designed base on principles learned from these experiments.
 %
 %
 %
 % Results
 % The results section should be the longest part of the abstract and should contain as much detail about the findings as the journal word count permits.
 %
-\blue{
-Results show comparable performance between FSM and ANN controllers, and in the optimal physical characteristics of the UGV.
+Results show comparable performance between FSM and ANN controllers, however, the evolved strategies differ.
 %
-The FSM designed by analyzing the ANN provides the advantages of both approaches: (1) the control system is no longer a black-box and can be predictably understood, and (2) it takes advantage of the continuous nature of an ANN.
-}
+The final controller is designed to take advantage of both approaches: (1) the control system is no longer a black-box and can be predictably understood (unlike the ANN), and (2) it takes advantage of the continuous nature of an ANN.
 %
 %
 %
@@ -38,12 +36,15 @@ The FSM designed by analyzing the ANN provides the advantages of both approaches
 % - The primary take-home message
 % - The additional findings of importance
 % - The perspective
-\blue{
-UGVs are valuable in many domains, however, they must be designed to work in many different environments.
+% UGVs are valuable in many domains, however, they must be designed to work in many different environments.
 %
-Our results show that a UGV's controller and physical characteristics can be effectively optimized using an evolutionary algorithm.
-}
+Our results show that a UGV's controller and physical characteristics can be effectively designed based on results from evolutionary optimization.
 
 \end{abstract}
 
-% Unmanned ground vehicles (UGVs) are well suited to tasks that are either too dangerous or too tedious for people. For example,  UGVs can be used to locate victims of a natural disaster. However, it is difficult to design these system so that they perform well in a variety of different environments. In this study, we evolved controllers and physical characteristics of a UGV such that it had improved mobility in a simulated environment. The UGV's mission was to visit a sequence of coordinates while automatically handling obstacles of varying sizes. Hand-designed finite state machines (FSMs) were compared with artificial neural networks (ANNs), and a new FSM was designed base on principles learned from the best ANN. Results show comparable performance between FSM and ANN controllers. The FSM modeled after the best ANN provides the advantages of both approaches; specifically the control system is no longer a black-box and can be predictably understood. Our results show that a UGV's controller and physical characteristics can be effectively optimized using an evolutionary algorithm.
+
+
+
+
+
+% Unmanned ground vehicles (UGVs) are well suited to tasks that are either too dangerous or too tedious for people. For example, UGVs can traverse arduous terrain in search of disaster victims. However, it is difficult to design these system so that they perform well in a variety of different environments. In this study, we evolve controllers and physical characteristics (dimensions of the chassis and wheel) of a UGV to improve its mobility in a simulated environment. The UGV's mission is to visit a sequence of coordinates while automatically handling obstacles of varying sizes. Evolved finite state machines (FSM) and artificial neural networks (ANNs) are compared, and a new controller is designed base on principles learned from these experiments. Results show comparable performance between FSM and ANN controllers, however, the evolved strategies differ. The final controller is designed to take advantage of both approaches: (1) the control system is no longer a black-box and can be predictably understood (unlike the ANN), and (2) it takes advantage of the continuous nature of an ANN. Our results show that a UGV's controller and physical characteristics can be effectively designed based on results from evolutionary optimization.
