--- a/paper/references/gecco2018.bib
+++ b/paper/references/gecco2018.bib
@@ -1,3 +1,130 @@
+@article{Hansen.2003.EC.CMAES,
+author = { Nikolaus Hansen  and  Sibylle D. Müller  and  Petros Koumoutsakos },
+title = {Reducing the Time Complexity of the Derandomized Evolution Strategy with Covariance Matrix Adaptation ({CMA-ES})},
+journal = {Evolutionary Computation},
+volume = {11},
+number = {1},
+pages = {1-18},
+year = {2003},
+doi = {10.1162/106365603321828970},
+abstract = { This paper presents a novel evolutionary optimization strategy based on the derandomized evolution strategy with covariance matrix adaptation (CMA-ES). This new approach is intended to reduce the number of generations required for convergence to the optimum. Reducing the number of generations, i.e., the time complexity of the algorithm, is important if a large population size is desired: (1) to reduce the effect of noise; (2) to improve global search properties; and (3) to implement the algorithm on (highly) parallel machines. Our method results in a highly parallel algorithm which scales favorably with large numbers of processors. This is accomplished by efficiently incorporating the available information from a large population, thus significantly reducing the number of generations needed to adapt the covariance matrix. The original version of the CMA-ES was designed to reliably adapt the covariance matrix in small populations but it cannot exploit large populations efficiently. Our modifications scale up the efficiency to population sizes of up to 10n, where n is the problem dimension. This method has been applied to a large number of test problems, demonstrating that in many cases the CMA-ES can be advanced from quadratic to linear time complexity. }
+}
+
+@inproceedings{Mouret.2017.SimER.Simulation,
+ author = {Mouret, Jean-Baptiste and Chatzilygeroudis, Konstantinos},
+ title = {20 Years of Reality Gap: A Few Thoughts About Simulators in Evolutionary Robotics},
+ booktitle = {Proceedings of the Genetic and Evolutionary Computation Conference Companion},
+ series = {GECCO '17},
+ year = {2017},
+ isbn = {978-1-4503-4939-0},
+ location = {Berlin, Germany},
+ pages = {1121--1124},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/3067695.3082052},
+ doi = {10.1145/3067695.3082052},
+ acmid = {3082052},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+@INPROCEEDINGS{Wrobel.2017.SSCI.VSSNN,
+author={Muhammad Yaqoob and Borys Wr{\'o}bel},
+booktitle={{2017 IEEE Symposium Series on Computational Intelligence (SSCI)}},
+title={Very Small Spiking Neural Networks Evolved to Recognize a Pattern in a Continuous Input Stream},
+year={2017},
+location={Honolulu, Hawaii, USA},
+month={Dec},}
+
+
+@inproceedings{Sims.1994.CGIT.Creatures,
+  title={Evolving virtual creatures},
+  author={Sims, Karl},
+  booktitle={Proceedings of the 21st annual conference on Computer graphics and interactive techniques},
+  pages={15--22},
+  year={1994},
+  organization={ACM}
+}
+
+@article{Stanley.2002.EC.NEAT,
+  title={Evolving neural networks through augmenting topologies},
+  author={Stanley, Kenneth O and Miikkulainen, Risto},
+  journal={Evolutionary computation},
+  volume={10},
+  number={2},
+  pages={99--127},
+  year={2002},
+  publisher={MIT Press}
+}
+
+@article{Hornik.1989.NN.UniversalANN,
+  title={Multilayer feedforward networks are universal approximators},
+  author={Hornik, Kurt and Stinchcombe, Maxwell and White, Halbert},
+  journal={Neural networks},
+  volume={2},
+  number={5},
+  pages={359--366},
+  year={1989},
+  publisher={Elsevier}
+}
+
+@article{Bongard.2013.CACM.ER,
+  title={Evolutionary robotics},
+  author={Bongard, Josh C},
+  journal={Communications of the {ACM}},
+  volume={56},
+  number={8},
+  pages={74--83},
+  year={2013},
+  publisher={ACM}
+}
+
+@inproceedings{Gomes.2015.GECCO.Maze,
+ author = {Gomes, Jorge and Mariano, Pedro and Christensen, Anders Lyhne},
+ title = {Devising Effective Novelty Search Algorithms: A Comprehensive Empirical Study},
+ booktitle = {Proceedings of the 2015 Annual Conference on Genetic and Evolutionary Computation},
+ series = {GECCO '15},
+ year = {2015},
+ isbn = {978-1-4503-3472-3},
+ location = {Madrid, Spain},
+ pages = {943--950},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/2739480.2754736},
+ doi = {10.1145/2739480.2754736},
+ acmid = {2754736},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {empirical study, evolutionary robotics, neuroevolution, novelty search, premature convergence},
+}
+
+
+@inproceedings{Moore.2017.GECCO.Animat,
+author = {Jared M. Moore and Anthony J. Clark and Philip K. McKinley},
+title = {Effect of Animat Complexity on the Evolution of Hierarchical Control},
+booktitle = {Proceedings of the 2017 ACM Genetic and Evolutionary Computation Conference},
+address = {Berlin, Germany},
+month = {7},
+year = {2017},
+doi = {https://doi.org/10.1145/3071178.3071246},
+abstract = {Animal movements are realized by a combination of high-level control from the nervous system and joint-level movement provided by the musculoskeletal system. The digital muscle model (DMM) emulates the low-level musculoskeletal system and can be combined with a high-level artificial neural network (ANN) controller forming a hybrid control strategy. Previous work has shown that, compared to ANN-only controllers, hybrid ANN/DMM controllers exhibit similar performance with fewer synapses, suggesting that some computation is offloaded to the low-level DMM. An open question is how the complexity of the robot, in terms of the number of joints, affects the evolution of the ANN control structure. We explore this question by evolving both hybrid controllers and ANN-only controllers for worm-like animats of varying complexity. Specifically, the number of joints in the worms ranges from 1 to 12. Consistent with an earlier study, the results demonstrate that, in most cases, hybrid ANN/DMM controllers exhibit equal or better performance than ANN-only controllers. In addition, above a threshold for animat complexity (number of joints), the ANNs for one variant of the hybrid controllers have significantly fewer connections than the ANN-only controllers.},
+}
+
+@book{Braitenberg.Vehicles.Book.1986,
+  title={Vehicles: Experiments in synthetic psychology},
+  author={Braitenberg, Valentino},
+  year={1986},
+  publisher={MIT press}
+}
+
+@incollection{Seeni.Mobility.InTech.2010,
+  title={Robot mobility systems for planetary surface exploration--state-of-the-art and future outlook: a literature survey},
+  author={Seeni, Aravind and Sch{\"a}fer, Bernd and Hirzinger, Gerd},
+  booktitle={Aerospace Technologies Advancements},
+  year={2010},
+  publisher={InTech},
+  doi={10.5772/6930},
+  pages={189-208}
+}
+
 @Inbook{Kruijff.SearchAndRescue.ICFSR.2014,
 author="Kruijff, G. J. M.
 and Jan{\'i}{\v{c}}ek, M.
