--- a/paper/sections/_0-abstract.tex
+++ b/paper/sections/_0-abstract.tex
@@ -6,7 +6,7 @@
 % This section should be the shortest part of the abstract and should very briefly outline the following information:
 % - What is already known about the subject, related to the paper in question
 % - What is not known about the subject and hence what the study intended to examine (or what the paper seeks to present)
-Unmanned ground vehicles (UGVs) are well suited to tasks that are either too dangerous or too tedious for people. For example, UGVs can traverse arduous terrain in search of disaster victims.
+Unmanned ground vehicles (UGVs) are well suited to tasks that are either too dangerous or too monotonous for people. For example, UGVs can traverse arduous terrain in search of disaster victims.
 %
 However, it is difficult to design these system so that they perform well in a variety of different environments.
 %
@@ -14,20 +14,20 @@ However, it is difficult to design these system so that they perform well in a v
 %
 %%% Methods
 % The methods section is usually the second-longest section in the abstract. It should contain enough information to enable the reader to understand what was done, and how.
-In this study, we evolve controllers and physical characteristics (dimensions of the chassis and wheel) of a UGV to improve its mobility in a simulated environment.
+In this study, we evolve controllers and physical characteristics of a UGV with transformable wheels to improve its mobility in a simulated environment.
 %
-The UGV's mission is to visit a sequence of coordinates while automatically handling obstacles of varying sizes.
+The UGV's mission is to visit a sequence of coordinates while automatically handling obstacles of varying sizes by extending wheel struts radially outward from the center of each wheel.
 %
-Evolved finite state machines (FSM) and artificial neural networks (ANNs) are compared, and a new controller is designed base on principles learned from these experiments.
+Evolved finite state machines (FSMs) and artificial neural networks (ANNs) are compared, and a set of controller design principles are gathered from analyzing these experiments.
 %
 %
 %
 % Results
 % The results section should be the longest part of the abstract and should contain as much detail about the findings as the journal word count permits.
 %
-Results show comparable performance between FSM and ANN controllers, however, the evolved strategies differ.
+Results show comparable performance between FSM and ANN controllers, but the evolved strategies differ.
 %
-The final controller is designed to take advantage of both approaches: (1) the control system is no longer a black-box and can be predictably understood (unlike the ANN), and (2) it takes advantage of the continuous nature of an ANN.
+% The final controller is designed to take advantage of both approaches: (1) the control system is no longer a black-box and can be predictably understood (unlike the ANN), and (2) it takes advantage of the continuous nature of an ANN.
 %
 %
 %
@@ -38,13 +38,11 @@ The final controller is designed to take advantage of both approaches: (1) the c
 % - The perspective
 % UGVs are valuable in many domains, however, they must be designed to work in many different environments.
 %
-Our results show that a UGV's controller and physical characteristics can be effectively designed based on results from evolutionary optimization.
+Furthermore, we show that a UGV's controller and physical characteristics can be effectively chosen by examining results from evolutionary optimization.
 
 \end{abstract}
 
 
 
 
-
-
-% Unmanned ground vehicles (UGVs) are well suited to tasks that are either too dangerous or too tedious for people. For example, UGVs can traverse arduous terrain in search of disaster victims. However, it is difficult to design these system so that they perform well in a variety of different environments. In this study, we evolve controllers and physical characteristics (dimensions of the chassis and wheel) of a UGV to improve its mobility in a simulated environment. The UGV's mission is to visit a sequence of coordinates while automatically handling obstacles of varying sizes. Evolved finite state machines (FSM) and artificial neural networks (ANNs) are compared, and a new controller is designed base on principles learned from these experiments. Results show comparable performance between FSM and ANN controllers, however, the evolved strategies differ. The final controller is designed to take advantage of both approaches: (1) the control system is no longer a black-box and can be predictably understood (unlike the ANN), and (2) it takes advantage of the continuous nature of an ANN. Our results show that a UGV's controller and physical characteristics can be effectively designed based on results from evolutionary optimization.
+% Unmanned ground vehicles (UGVs) are well suited to tasks that are either too dangerous or too monotonous for people. For example, UGVs can traverse arduous terrain in search of disaster victims. However, it is difficult to design these system so that they perform well in a variety of different environments. In this study, we evolve controllers and physical characteristics of a UGV with transformable wheels to improve its mobility in a simulated environment. The UGV's mission is to visit a sequence of coordinates while automatically handling obstacles of varying sizes by extending wheel struts radially outward from the center of each wheel. Evolved finite state machines (FSMs) and artificial neural networks (ANNs) are compared, and a set of controller design principles are gathered from analyzing these experiments. Results show comparable performance between FSM and ANN controllers, but the evolved strategies differ. Furthermore, we show that a UGV's controller and physical characteristics can be effectively chosen by examining results from evolutionary optimization.
